<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E6F6C"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        app:hintTextColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:hintTextColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/til_old_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        app:hintTextColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/til_new_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change"
        android:textColor="@color/white"
        android:backgroundTint="#000000"
        app:layout_constraintTop_toBottomOf="@+id/til_confirm_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        style="@style/Widget.Material3.Button" />
    <Button
        android:id="@+id/btn_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:backgroundTint="#000000"
        app:layout_constraintTop_toBottomOf="@id/btn_save_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        style="@style/Widget.Material3.Button" />

</androidx.constraintlayout.widget.ConstraintLayout>